[gd_scene format=3 uid="uid://bsf21o275q3nu"]

[ext_resource type="Theme" uid="uid://b7p50c8f11cyn" path="res://NewGameButton.tres" id="1_ipu1u"]
[ext_resource type="Script" uid="uid://bwphjb656m6mk" path="res://new_game_btn.gd" id="2_thxme"]

[node name="NewGameBtn" type="Button" unique_id=130003780]
custom_minimum_size = Vector2(48, 18)
offset_right = 48.0
offset_bottom = 18.0
pivot_offset = Vector2(24, 9)
theme = ExtResource("1_ipu1u")
script = ExtResource("2_thxme")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
